fixed overflow in the x

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,8 @@ html, body {
   padding: 0;
   height: 100%;
   width: 100%;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   font-family: Arial, sans-serif;
   background-color: #121212;
 }
