--- a/src/components/SetupForm/SetupForm.css
+++ b/src/components/SetupForm/SetupForm.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   height: 100vh;
   align-items: center;
-  overflow-y: auto;
 }
 
 .instruction-container {
